
  > ss 290
  Permitted to use Defender (257), level 5
  You use Abracadabra on yourself: Lv 10
  > ss 257
  You use Defender on yourself: Lv 5
- 'monster', 'monocell', 'death' and 'mvp' commands have been removed. If you
  actually use these, set these aliases in your config.txt:

  alias_monster ss 293
  alias_monocell sm 293
  alias_death sp 295
  alias_mvp sm 292

New config options:
- useSelfSkill_#_monsters
  partySkill_#_monsters
  partySkill_#_target_monsters
  useSelf_item_#_monsters
  Only activate useSelfSkill/partySkill/useSelf_item if a certain 
  monster attacks.
- partySkill_#_target_aggressives
  Only activate partySkill if a certain monster attacks a party member.

Bug fixes:
- Kore can walk on walkable water now (bug #21).
- Don't open shop immediately after login in X-Kore mode (bug #49).
- Re-entering a username/password works correctly now (bug #45).
- sitAuto_idle doesn't conflict with shopAuto_open's timeout now (bug #50).

Internal:
- findIndex() and related functions are now much faster (bug #16).
- writeDataFile*() won't write trailing spaces.
- Functions in Tools.dll are now called through XS, Perl's native
  C-to-Perl interface.
- Kore now detects what directory its executable is in, and adds it to
  its include path (@INC).
- Fixed a crash when cart inventory is not available (such as during login).

Credits:
- Joseph: -1 flag support in mon_control.txt
- aputs: Support for the _monsters option in useSelf_skill, useSelf_item
  and partySkill.
- obyarou: Priority attack support for non-aggressive monsters,
  shop timeout in X-Kore bugfix (bug #49), sitAuto_idle vs
  shopAuto_open conflict fix (bug #50).
- fov: writeDataFile*() tweaks
- polokus: idRO Amatsu/Kunlun support
- Ven`Tatsu: walkable water bugfix (bug #21)
- mfr: advanced 2-2 skills support.


==================
### 1.4.1
==================

New features:
- idRO's new secure login keys are now supported. Set secureLogin_type to 4
  or 5, depending on your server.
